3.0.0:
- New: Material You redesign with dynamic colors for Android 12 and later
- New: Replaced HTML editor for recipe and product descriptions (same like on grocy server)
- Fixed: F-Droid build should work again (#566)

2.3.0:
- New: Support for grocy server v3.3.1
- New: Recipes feature (huge thanks @Tim-Otte for your great work!) (#148)
- New: HTML viewer and editor for product description which can load pictures
- New: Stock journal page (#140)
- New: Server v3.3.0 feature "Notes for stock entries" (#511)
- New: Stock quantity unit now can be changed with server v3.3.0 (#511)
- New: Notification for due soon items in stock (thanks @igor-cali for the initial work) (#108)
- New: Chores can now be rescheduled (server v3.3.0 feature) (#511)
- Improved: Entries on stock entries page are colored if volatile
- Improved: Price entered on inventory page is now related to selected quantity unit (#511)
- Improved: On transaction pages adding of known barcode is prevented (#541)
- Improved: On stock overview page you can search with grocy code (#547)
- Improved: Chores page now displays time if necessary (#549)
- Improved: (not F-Droid) Add explanation for contacts permission on devices with GPlay services
- Fixed: Product 'purchase to stock' conversion is preferred to additional conversions (#490)
- Fixed: Quantity units from default conversions are now selectable on transaction pages (#530)
- Fixed: Location filter didn't work properly on stock overview page (#554)
- Fixed: Skip scanner steps on login if no camera available (#553)

2.2.1:
- New: Stock entries page (#403)
- Improved: Display stock locations on product overview bottom sheet (#449)
- Improved: Splash screen (will be further improved for Android 12 with the upcoming redesign)
- Fixed: On transfer page no locations were selectable as target (#515)
- Fixed: Crash after creating product with purchase or inventory transaction (#518)

2.2.0: